--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-ver-material-design-352x352.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Đăng ký</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -82,7 +82,7 @@
 
 
                     <form action="http://sendi.hrc.com.vn/subscribe" method="POST" accept-charset="utf-8">
-  
+
                                 <div class="form-group ">
                                 <input class="form-control form-control-solid placeholder-no-fix parsley-error"  placeholder="Họ và tên" required="required" name="name" type="text" data-parsley-id="name">
 
