--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                               	<br>
                               	<input type="hidden" name="list" value="nENK6Tj7hgdM892UGl97AzIw">
-                    <button type="submit" class="submit btn btn-secondary">Hoàn thành</button>
+                    <button type="submit" class="btn btn-primary btn-form display-4">Hoàn thành</button>
 
 
                           </div>
