--- a/index.html
+++ b/index.html
@@ -67,10 +67,8 @@
 
                 <div>
                     <div class="icon-block pb-3">
-                        <span class="icon-block__icon">
-                            <span class="mbri-letter mbr-iconfont"></span>
-                        </span>
-                        <h4 class="icon-block__title align-left mbr-fonts-style display-5"><span style="font-style: normal;">ĐĂNG KÝ THAM DỰ ĐÊM CHUNG KẾT<br>ỨNG VIÊN TÀI NĂNG 2018</span></h4>
+
+                        <h4 class="icon-block__title align-left mbr-fonts-style display-5"><span style="font-style: normal;">ĐĂNG KÝ THAM DỰ ĐÊM CHUNG KẾT<br><br><span style="color: #20a286; font-size: 32px">ỨNG VIÊN TÀI NĂNG 2018</span></span></h4>
                     </div>
                     <div class="icon-contacts pb-3">
 
